Bug 355884 - preview.png for filemanager thumbnail is not trimmed anymore
Summary: preview.png for filemanager thumbnail is not trimmed anymore
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 2.9.9
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-25 10:53 UTC by David REVOY
Modified: 2015-12-01 17:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
[^ screenshot of the bug ] (2.74 MB, image/bmp)
2015-11-25 10:53 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2015-11-25 10:53:20 UTC
Created attachment 95726 [details]
[^ screenshot of the bug  ]

Hi,
Krita has a new behavior when saving a file to *.kra : the rendered and embeded 'preview.png' thumbnail show now the artwork with all the strokes outside the canvas ( and often within a large zone of transparency around ). This make the preview image harder to read and not giving a good feedback of the artwork. ( I attach a screenshot to this bug report ). 

To reproduce :
1. Open a document
2. Add Layer
3. Paint outside the canvas area
4. Save as *.kra

Result: 
The Image thumbnail ( in filemanager )  shows the strokes outside the canvas size.

Expected result:
Having the thumbnail preview trimmed to the canvas size and proportion ratio , to see only the canvas. 

( Note; this new behavior is very recent ; I would say it's a new one from a week or two. It's in 2.9.9 official , I'm on laptop, using Krita PPA version )
Comment 1 Halla Rempt 2015-12-01 17:06:47 UTC
Git commit 58df218f5dd25b885236f7d94e08f2942872773c by Boudewijn Rempt.
Committed on 01/12/2015 at 17:06.
Pushed by rempt into branch 'calligra/2.9'.

Crop the projection before creating a thumbnail
Fixes T1041

M  +4    -2    krita/image/kis_image.cc

http://commits.kde.org/calligra/58df218f5dd25b885236f7d94e08f2942872773c
Comment 2 Halla Rempt 2015-12-01 17:06:53 UTC
Git commit 2874ff079402da8f25fbfb3d709bb435b0b2f2f8 by Boudewijn Rempt.
Committed on 01/12/2015 at 17:06.
Pushed by rempt into branch 'master'.

Crop the projection before creating a thumbnail
Fixes T1041

M  +4    -2    krita/image/kis_image.cc

http://commits.kde.org/krita/2874ff079402da8f25fbfb3d709bb435b0b2f2f8