Crop the projection before creating a thumbnail

BUG:355884
Fixes T1041